<resources>
    <string name="app_name">MathMaster</string>
    <string name="start_score">0/0</string>
    <string name="enter_answer">Enter Number</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="operator">+</string>
    <string name="big_num">big_num</string>
    <string name="small">small</string>
    <string name="results">Results:</string>
    <string name="percent">%</string>
    <string name="correct">Correct:</string>
    <string name="incorrect">Incorrect/Skipped:</string>
    <string name="overall_performance">Overall Performance:</string>
    <string name="num">num</string>
    <string name="zero">0</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_gameA">GameActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="division">Division /</string>
    <string name="multiplication">Multiplication *</string>
    <string name="subtraction">Subtraction -</string>
    <string name="addition">Addition +</string>
    <string name="enter_a_time">Enter a Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="start_game">Start Game</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="choose_topic">Choose Topic:</string>
    <string name="see_account_summary">See Account Summary</string>
    <string name="back_to_home">Back to Home</string>
    <string name="overall_0">Overall %</string>
    <string name="correct_sum">Correct</string>
    <string name="operation">Operation</string>
    <string name="_0">0%</string>
    <string name="_incorrect">Incorrect</string>
    <string name="_multiplication">Multiplication</string>
    <string name="total">Total</string>
    <string name="performance_summary">Performance Summary</string>
    <string name="_addition">Addition</string>
    <string-array name="time_array">
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
    </string-array>
</resources>