<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id = "@+id/enterTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_a_time"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="?android:textColorPrimary"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/chooseTime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="@id/enterTime"
        app:layout_constraintTop_toBottomOf="@id/enterTime">

        <Spinner
            android:id="@+id/chooseTimeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@android:drawable/dialog_holo_light_frame"
            android:textColor="?android:textColorPrimary"
            />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id = "@+id/Difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        android:textSize="13sp"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toLeftOf="@id/chooseTime"
        app:layout_constraintTop_toBottomOf="@id/chooseTime"
        android:textColor="?android:textColorPrimary"/>

    <RadioGroup
        android:id="@+id/difficultyRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@id/Difficulty"
        app:layout_constraintTop_toBottomOf="@id/Difficulty"
        >

        <RadioButton android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/easy"
            android:onClick="onRadioButtonClicked"
            android:textSize="13sp"/>

        <RadioButton android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:onClick="onRadioButtonClicked"
            android:textSize="13sp"/>

        <RadioButton android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:onClick="onRadioButtonClicked"
            android:textSize="13sp"/>

    </RadioGroup>

    <Button
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/start_game"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>