<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/chooseOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:text="@string/choose_topic"
        android:textSize="25sp"
        android:textColor="?android:textColorPrimary"/>
    <Button
        android:id="@+id/addition"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/chooseOption"
        android:text="@string/addition"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/subtraction"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/addition"
        android:text="@string/subtraction"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/multiplication"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/subtraction"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/division"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/multiplication"
        android:text="@string/division"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/accountSum"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/division"
        android:text="@string/see_account_summary"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint = "@color/green"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:src = "@drawable/newlogo"
        app:layout_constraintTop_toBottomOf="@id/accountSum"
        app:layout_constraintLeft_toLeftOf="@id/division"
        app:layout_constraintRight_toRightOf="@id/division"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    

</androidx.constraintlayout.widget.ConstraintLayout>