<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!--    tools:context=".MainActivity">-->


    <TextView
        android:id = "@+id/gameProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/start_score"
        android:textSize="40sp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        />


    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gameProgress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TableRow>
            <androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id = "@+id/topNumOfQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/big_num"
                    android:textSize="58sp"
                    android:layout_marginTop="40dp"
                    />
                <TextView
                    android:id = "@+id/operator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/bottomNumOfQuestion"
                    app:layout_constraintRight_toLeftOf="@id/topNumOfQuestion"
                    android:text="@string/operator"
                    android:textSize="50sp"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id = "@+id/bottomNumOfQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/topNumOfQuestion"
                    app:layout_constraintRight_toRightOf="@id/topNumOfQuestion"
                    android:text="@string/small"
                    android:textSize="58sp"
                    android:layout_marginTop="0dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </TableRow>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf = "@id/bottomNumOfQuestion"
            app:layout_constraintRight_toRightOf="@id/bottomNumOfQuestion"
            app:layout_constraintLeft_toLeftOf="@id/bottomNumOfQuestion"
            android:inputType="none"
            />
    </TableLayout>

    <EditText
        android:id = "@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf = "@id/table"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_answer"
        android:textSize="40sp"
        android:inputType="number" />

    <Button
        android:id="@+id/skip_button"
        android:text="@string/skip"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sumbit_button"
        app:layout_constraintTop_toBottomOf="@id/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:onClick="Skip" />

    <Button
        android:id="@+id/sumbit_button"
        android:text="@string/submit"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/skip_button"
        app:layout_constraintTop_toBottomOf="@id/answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:onClick="Submit" />

</androidx.constraintlayout.widget.ConstraintLayout>